# ndvi

./: .gitignore  README.md  main.py  pyproject.toml  utils.py
src/: demo.py  main.py  utils.py
