[project]
name = "ndvi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask>=2024.12.1",
    "fastparquet>=2024.11.0",
    "fiona>=1.10.1",
    "gdal>=3.10",
    "geopandas>=1.0.1",
    "ipdb>=0.13.13",
    "ipython>=8.30.0",
    "mapclassify>=2.8.1",
    "matplotlib>=3.10.0",
    "polars>=1.17.1",
    "pyqt6>=6.8.0",
    "rasterio>=1.4.3",
    "rtree>=1.3.0",
    "tqdm>=4.67.1",
]
